5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4350/executions/1649_2447.log
== TEST (2019-04-15 23:17:19) 
-- CODE:
a = float(input("preço"))
b = floar(input("pagamento"))
if a > b:
	print(rount(a - b, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    b = floar(input())
NameError: name 'floar' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 23:17:25) 
-- CODE:
a = float(input("preco"))
b = floar(input("pagamento"))
if a > b:
	print(rount(a - b, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    b = floar(input())
NameError: name 'floar' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 23:17:34) 
-- CODE:
a = float(input("preco"))
b = float(input("pagamento"))
if a > b:
	print(rount(a - b, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(rount(a - b, 2))
NameError: name 'rount' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 23:17:37) 
-- CODE:
a = float(input("preco"))
b = float(input("pagamento"))
if a > b:
	print(rount(a - b, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(rount(a - b, 2))
NameError: name 'rount' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 23:17:47) 
-- CODE:
a = float(input("preco"))
b = float(input("pagamento"))
if a > b:
	print(round(a - b, 2))
-- OUTPUT:
26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 23:17:50) 
-- CODE:
a = float(input("preco"))
b = float(input("pagamento"))
if a > b:
	print(round(a - b, 2))
-- OUTPUT:
26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 23:17:58) 
-- CODE:
a = float(input("preco"))
b = float(input("pagamento"))
if a > b:
	print(round(a - b, 2))
-- OUTPUT:
26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 23:18:51) 
-- CODE:
a = float(input("preco"))
b = float(input("pagamento"))
if a > b:
	print(round(a - b, 2))
if b > a:
	print("troco de " +round(b-a, 2) )
-- OUTPUT:
26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 23:19:11) 
-- CODE:
a = float(input("preco"))
b = float(input("pagamento"))
if a > b:
	print(round(a - b, 2))
if b > a:
	print("troco de " + round(b - a, 2))
-- OUTPUT:
26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 23:19:13) 
-- CODE:
a = float(input("preco"))
b = float(input("pagamento"))
if a > b:
	print(round(a - b, 2))
if b > a:
	print("troco de " + round(b - a, 2))
-- OUTPUT:
26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 23:19:17) 
-- CODE:
a = float(input("preco"))
b = float(input("pagamento"))
if a > b:
	print(round(a - b, 2))
if b > a:
	print("troco de " + round(b - a, 2))
-- OUTPUT:
26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 23:20:08) 
-- CODE:
a = float(input("preco"))
b = float(input("pagamento"))
if a > b:
	print(round(a - b, 2))
if b > a:
	print("troco de " + b - a)
-- OUTPUT:
26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 23:20:34) 
-- CODE:
a = float(input("preco"))
b = float(input("pagamento"))
if a > b:
	print(round(a - b, 2))
if b > a:
	print(("troco de ") + b - a)
-- OUTPUT:
26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 23:20:59) 
-- CODE:
a = float(input("preco"))
b = float(input("pagamento"))
if a > b:
	print(round(a - b, 2))
if b > a:
	print(round(b - a, 2))
-- OUTPUT:
26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 23:21:10) 
-- CODE:
a = float(input("preco"))
b = float(input("pagamento"))
if a > b:
	print(round(a - b, 2))
if b > a:
	print(round(b - a, 2))
-- OUTPUT:
26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 23:22:04) 
-- CODE:
a = float(input("preco"))
b = float(input("pagamento"))
if a > b:
	print(round(a - b, 2))
if b > a:
	print("Troco de ", round(b - a, 2))
-- OUTPUT:
26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 23:22:14) 
-- CODE:
a = float(input("preco"))
b = float(input("pagamento"))
if a > b:
	print(round(a - b, 2))
if b > a:
	print("Troco de ", round(b - a, 2))
-- EXECUTION TIME:
0.187051
-- TEST CASE 1:
---- input:
38.0
12.0
---- correct output:
Falta 26.0
---- user output:
26.0
-- TEST CASE 2:
---- input:
32.0
60.0
---- correct output:
Troco de 28.0
---- user output:
Troco de  28.0
-- TEST CASE 3:
---- input:
516.0
516.0
---- correct output:
Troco de 0.0
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 23:22:20) 
-- CODE:
a = float(input("preco"))
b = float(input("pagamento"))
if a > b:
	print(round(a - b, 2))
if b > a:
	print("Troco de", round(b - a, 2))
-- EXECUTION TIME:
0.14978
-- TEST CASE 1:
---- input:
38.0
12.0
---- correct output:
Falta 26.0
---- user output:
26.0
-- TEST CASE 2:
---- input:
32.0
60.0
---- correct output:
Troco de 28.0
---- user output:
Troco de 28.0
-- TEST CASE 3:
---- input:
516.0
516.0
---- correct output:
Troco de 0.0
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 23:22:23) 
-- CODE:
a = float(input("preco"))
b = float(input("pagamento"))
if a > b:
	print(round(a - b, 2))
if b > a:
	print("Troco de", round(b - a, 2))
-- OUTPUT:
26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 23:22:29) 
-- CODE:
a = float(input("preco"))
b = float(input("pagamento"))
if a > b:
	print(round(a - b, 2))
if b > a:
	print("Troco de", round(b - a, 2))
-- EXECUTION TIME:
0.137728
-- TEST CASE 1:
---- input:
38.0
12.0
---- correct output:
Falta 26.0
---- user output:
26.0
-- TEST CASE 2:
---- input:
32.0
60.0
---- correct output:
Troco de 28.0
---- user output:
Troco de 28.0
-- TEST CASE 3:
---- input:
516.0
516.0
---- correct output:
Troco de 0.0
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 23:22:43) 
-- CODE:
a = int(input("preco"))
b = int(input("pagamento"))
if a > b:
	print(round(a - b, 2))
if b > a:
	print("Troco de", round(b - a, 2))
-- EXECUTION TIME:
0.160089
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1649/2447/main.py", line 1, in <module>
    a = int(input())
ValueError: invalid literal for int() with base 10: '38.0'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 23:22:45) 
-- CODE:
a = int(input("preco"))
b = int(input("pagamento"))
if a > b:
	print(round(a - b, 2))
if b > a:
	print("Troco de", round(b - a, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    a = int(input())
ValueError: invalid literal for int() with base 10: '38.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 23:23:14) 
-- CODE:
a = float(input("preco"))
b = float(input("pagamento"))
if a > b:
	print("falta", round(a - b, 2))
if b > a:
	print("Troco de", round(b - a, 2))
-- EXECUTION TIME:
0.131888
-- TEST CASE 1:
---- input:
38.0
12.0
---- correct output:
Falta 26.0
---- user output:
falta 26.0
-- TEST CASE 2:
---- input:
32.0
60.0
---- correct output:
Troco de 28.0
---- user output:
Troco de 28.0
-- TEST CASE 3:
---- input:
516.0
516.0
---- correct output:
Troco de 0.0
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 23:23:14) 
-- CODE:
a = float(input("preco"))
b = float(input("pagamento"))
if a > b:
	print("falta", round(a - b, 2))
if b > a:
	print("Troco de", round(b - a, 2))
-- OUTPUT:
falta 26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 23:23:21) 
-- CODE:
a = float(input("preco"))
b = float(input("pagamento"))
if a > b:
	print("falta", round(a - b, 2))
if b > a:
	print("Troco de", round(b - a, 2))
-- OUTPUT:
falta 26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 23:23:31) 
-- CODE:
a = float(input("preco"))
b = float(input("pagamento"))
if a > b:
	print("Falta", round(a - b, 2))
if b > a:
	print("Troco de", round(b - a, 2))
-- EXECUTION TIME:
0.145589
-- TEST CASE 1:
---- input:
38.0
12.0
---- correct output:
Falta 26.0
---- user output:
Falta 26.0
-- TEST CASE 2:
---- input:
32.0
60.0
---- correct output:
Troco de 28.0
---- user output:
Troco de 28.0
-- TEST CASE 3:
---- input:
516.0
516.0
---- correct output:
Troco de 0.0
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 23:24:59) 
-- CODE:
a = float(input("preco"))
b = float(input("pagamento"))
if a > b:
	print("Falta", round(a - b, 2))
if b > a:
	print("Troco de", round(b - a, 2))
-- OUTPUT:
Falta 26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 23:25:11) 
-- CODE:
a = float(input("preco"))
b = float(input("pagamento"))
if a > b:
	print("Falta", round(a - b, 2))
if b > a:
	print("Troco de", round(b - a, 2))
-- EXECUTION TIME:
0.196663
-- TEST CASE 1:
---- input:
38.0
12.0
---- correct output:
Falta 26.0
---- user output:
Falta 26.0
-- TEST CASE 2:
---- input:
32.0
60.0
---- correct output:
Troco de 28.0
---- user output:
Troco de 28.0
-- TEST CASE 3:
---- input:
516.0
516.0
---- correct output:
Troco de 0.0
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 23:25:20) 
-- CODE:
a = float(input("preco"))
b = float(input("pagamento"))
if a > b:
	print("Falta", round(a - b, 2))
else b > a:
	print("Troco de", round(b - a, 2))
-- EXECUTION TIME:
0.149624
-- ERROR:
  File "/home/codebench/codes/1649/2447/main.py", line 5
    else b > a:
         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 23:25:34) 
-- CODE:
a = float(input("preco"))
b = float(input("pagamento"))
if a > b:
	print("Falta", round(a - b, 2))
if b >= a:
	print("Troco de", round(b - a, 2))
-- EXECUTION TIME:
0.14306
-- TEST CASE 1:
---- input:
38.0
12.0
---- correct output:
Falta 26.0
---- user output:
Falta 26.0
-- TEST CASE 2:
---- input:
32.0
60.0
---- correct output:
Troco de 28.0
---- user output:
Troco de 28.0
-- TEST CASE 3:
---- input:
516.0
516.0
---- correct output:
Troco de 0.0
---- user output:
Troco de 0.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
